--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,9 +4,9 @@ The Analog Unlabelled Clock shows times across different cities around the world
 It utilizes moment-timezone js library to depict DST corrected time by taking the timezone value as input.
 and feeding them to clocks created by HTML5 Canvas.
 <br/>
-It also provided option to the user to display neither, either or both the city's name and date.
+It also provides option to the user to display neither, either or both the city's name and date.
 <br/>
-In the given below example the A list of cities around wthe world along with their timezones has been fed to the component.
+In the given below example the A list of cities around the world along with their timezones has been fed to the component.
 <br/>
 In the first clock, it uses the default time and Location from the moment.js timezone.
 </div>
