removing cities limit

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -13,7 +13,7 @@ In the first clock, it uses the default time and Location from the moment.js tim
 
 <div class="container-fluid">
   <div class="row">
-      <div class="col-lg-2 col-md-3 col-sm-4 col-xs-4 canvas-col" *ngFor="let city of cities | slice:0:5;">
+      <div class="col-lg-2 col-md-3 col-sm-4 col-xs-4 canvas-col" *ngFor="let city of cities">
           <div>
               <app-unlabelled-clock [city]="city.name" [timezone]="city.timezone" [displayDate]="city.displayDate" [displayName]="city.displayName"></app-unlabelled-clock>
           </div>          
