--- a/src/app/components/unlabelled-clock/unlabelled-clock.component.html
+++ b/src/app/components/unlabelled-clock/unlabelled-clock.component.html
@@ -1,3 +1,5 @@
-
-<canvas id="{{ 'unlabelledClockCanvas-' + timezone + '-' + city}}" width="150" height="150"></canvas>
-   
+<canvas
+  id="{{ 'unlabelledClockCanvas-' + timezone + '-' + city }}"
+  width="150"
+  height="150"
+></canvas>
