--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -14,7 +14,8 @@
 
 <div class="container-fluid">
   <div class="row">
-    <div *ngFor="let city of cities" class="col-lg-2 col-md-3 col-sm-4 col-xs-4 canvas-col">
+    @for (city of cities; track city) {
+    <div class="col-lg-2 col-md-3 col-sm-4 col-xs-4 canvas-col">
       <div>
         <app-unlabelled-clock
           [city]="city.name"
@@ -25,5 +26,6 @@
       </div>
       <p>{{ city.name }}, {{ city.country }}</p>
     </div>
+    }
   </div>
 </div>
